--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-google-charts": "^4.0.0"
+    "recharts": "^2.1.12"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
